# my-personal-daily-journal

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
app/: database.py  main.py  models.py
