[project]
name = "my-personal-daily-journal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.1",
    "jinja2>=3.1.6",
    "pymysql>=1.1.3",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.29",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.47.0",
]

[tool.uv.workspace]
members = [
    "my-personal-daily-journal",
]
