[project]
name = "my-personal-daily-journal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.136.1",
    "jinja2>=3.1.6",
    "psycopg2-binary>=2.9.12",
    "psycopg[binary]>=3.3.4",
    "pymysql>=1.1.3",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.29",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.47.0",
]

[tool.uv.workspace]
members = [
    "my-personal-daily-journal",
]
